# shows-crawler

./: .gitignore  .travis.yml  README.md  build.gradle  gradlew  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
notifier/: build.gradle
notifier/src/main/resources/: log4j2.yaml
notifier/src/test/resources/: newstudio.html
notifier/src/test/resources/alexfilm/: 11.22.63.html  alexfilm.html  we_bare_bears.html
notifier/src/test/resources/lostfilm/: lostfilm.html  lostfilm.xml
notifier/src/test/resources/newstudio/: defenders.html  game_of_thrones.html  newstudio.html
server/: CHANGELOG.md  Cargo.toml  log4rs.yaml
server/migrations/20170218080435_base_db_scheme/: down.sql  up.sql
server/migrations/20170325201346_source_name_in_shows/: down.sql  up.sql
server/migrations/20170326101553_users_add_superuser_column/: down.sql  up.sql
server/migrations/20170401080003_add_show_url_and_add_unique_constraint/: down.sql  up.sql
server/migrations/20170706101111_session-field/: down.sql  up.sql
server/migrations/2018-03-18-201932_add_alexfilm_source/: down.sql  up.sql
server/src/: commands.rs  entities.rs  lib.rs  main.rs  models.rs  schema.rs  telegram_api.rs
shows-collector/: build.gradle
shows-collector/src/test/resources/: others.htm  revolution.htm
shows-collector/src/test/resources/alexfilm/: cartoons.html  invisible_worlds.html
shows-collector/src/test/resources/newstudio/: fringe.htm  longmire.htm  newstudio.htm
src/main/kotlin/com/warrior/series_crawler/: Crawler.kt  Episode.kt  main.kt
(+76 files in other folders)
